[REDO] compiler/types/correctness/* tests fail with "assert(recv == __null || recv->is_klass()) failed: wrong type"

XMLWordPrintable

    • b21
    • x86_64
    • linux

        The fix for JDK-8225670 failed due to performance regressions and failures including SPARC (see linked bugs) and therefore needs to be re-worked.

          There are no Sub-Tasks for this issue.

              Assignee:
              Christian Hagedorn
              Reporter:
              Tobias Hartmann
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: